# warehouse-service-test-task-bristol

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
dockerfiles/: Dockerfile
kafka_settings/: kraft.properties
kafka_settings/scripts/: kafka-init.sh
monitoring/: prometheus.yml
nginx/: nginx.conf
src/: cli.py  config.py  interfaces.py  main.py  models.py  repository.py  service.py  type_hints.py
src/domains/: exceptions.py  interfaces.py  models.py  service.py
src/infrastructure/: db.py  logger.py
src/infrastructure/kafka/: connection.py  consume.py
src/infrastructure/mongo/: connection.py  repository.py  type_hints.py
src/infrastructure/redis/: connection.py
src/routers/: __init__.py  movements.py  warehouses.py
src/serializers/: from_kafka_pydantic.py  to_json.py
src/utils/: fill_db.py
src/utils/data/: test_warehouse_events.json
