[project]
name = "warehouse-service-test-task-bristol"
version = "0.1.0"
description = ""
authors = [
    {name = "DESKTOP-VGH69S8\\AlexeyShakov",email = "alexei_96@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.4"
